--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,11 @@
       "@savings-io/shared/auth": [
         "shared/auth/index.ts"
       ],
-      "@savings-io/model": [
+      "@savings-io/shared/model": [
         "shared/model/index.ts"
+      ],
+      "@savings-io/router-paths": [
+        "shared/router-paths/index.ts"
       ]
     }
   },
