Cleanup project, change theme and introduce new login page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,16 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
-    "module": "es2020",
+    "target": "es2022",
+    "module": "es2022",
     "lib": [
-      "es2020",
+      "es2022",
       "dom"
     ],
     "paths": {
+      "@savings-io/core": [
+        "core/index.ts"
+      ],
       "@savings-io/shared/auth": [
         "shared/auth/index.ts"
       ],
